# text-features-detector

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: experiment.yaml  models.yaml
src/text_features_detector/: __init__.py  cli.py
src/text_features_detector/data/: __init__.py  golden_set.py  helpers.py  loaders.py
src/text_features_detector/eval/: __init__.py  metrics.py  runner.py
src/text_features_detector/features/: __init__.py  registry.py
src/text_features_detector/judges/: __init__.py  deepeval_model.py  judge.py  registry.py
src/text_features_detector/models/: __init__.py  config.py  features.py  results.py  sample.py
src/text_features_detector/reporting/: __init__.py  helpers.py  report.py
src/text_features_detector/strategies/: __init__.py  geval_strategy.py  simple_binary.py
tests/: test_deepeval_model.py  test_features.py  test_golden_set.py  test_judge_backoff.py  test_metrics.py  test_model_registry.py  test_models.py  test_pydantic_ai_judge.py  test_runner_resume.py
